# tools

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  multi-input.cwl  optional_scatter_wf.cwl  pyproject.toml  validate_manifests_image_tools.py  wipp_to_clt.py  wipp_to_ict.py
cwl/image_tools/: OmeConverter.cwl
cwl_generated/check_assignment/: chek_assignment.cwl
cwl_generated/check_assignments/: chek_assignment.cwl
cwl_generated/debug_image_processing_2/: step__wf_image_processing.yaml  wf_image_processing.cwl
cwl_generated/demo_assignments/: chek_assignment.cwl  step__chek_assignment.yaml
cwl_generated/demo_conditional/: step__workflow_conditional.yaml  workflow_conditional.cwl
cwl_generated/demo_image_processing/: step__wf_image_processing.yaml  wf_image_processing.cwl
cwl_generated/demo_multi_inputs/: multi-inputs-workflow.cwl  step__multi-inputs-workflow.yaml
cwl_generated/demo_multi_inputs_builder/: multi_inputs.cwl  step__multi_inputs.yaml
cwl_generated/demo_scatter/: step__wf_scatter.yaml  wf_scatter.cwl
cwl_generated/rt_cetsa_workflow/: step__wf_rt_cetsa.yaml  wf_rt_cetsa.cwl
cwl_generated/test_conditional/: conditional-workflow.cwl  step__workflow_conditional.yaml  workflow_conditional.cwl
cwl_generated/test_optional/: optional_scatter_wf.cwl
cwl_generated/test_roundtrip/: echo_string.cwl  echo_string_with_multiline_doc.cwl  workflow3.cwl
cwl_generated/test_save/: subworkflow1.cwl  workflow5.cwl
cwl_generated/test_scatter/: scatter-workflow2.cwl  step__wf_scatter.yaml  wf_scatter.cwl
cwl_generated/test_workflow_builder/: step__wf4.yaml  wf3.cwl  wf4.cwl
examples/: rt_cetsa_workflow.py
examples/workflows/: __init__.py  check_assignments.py  demo_assignments.py  demo_conditional.py  demo_image_processing.py  demo_multi_inputs.py  demo_multi_inputs_builder.py  demo_scatter.py
src/polus/: __init__.py
src/polus/tools/conversions/: __init__.py
src/polus/tools/plugins/: __init__.py
src/polus/tools/workflows/: __init__.py  model.py  (+10 more)
tests/plugins/: test_cwl.py  test_io.py  test_manifests.py  test_plugins.py  test_version.py
tests/plugins/resources/: omeconverter032dev0.json
tests/workflows/: __init__.py  conftest.py  test_conditional.py  test_load.py  test_misc.py  test_model.py  test_optional.py  test_roundtrip.py  test_save.py  test_scatter.py  test_step_builder.py  test_value_assignment.py  test_workflow_builder.py
tests/workflows/test_data/: conditional-workflow.cwl  echo_string.cwl  echo_string_array.cwl  echo_string_v10.cwl  echo_string_with_multiline_doc.cwl  multi-inputs-workflow.cwl  multi-inputs-workflow2.cwl  nested_types2.cwl  nested_types3.cwl  scatter-workflow1.cwl  scatter-workflow2.cwl  subworkflow1.cwl  touch_single.cwl  uppercase2_wic_compatible2.cwl  uppercase2_wic_compatible2_optional.cwl  uppercase2_wic_compatible3.cwl  workflow3.cwl  workflow3_inline.cwl  workflow5.cwl  workflow7.cwl
(+32 files in other folders)
