[tool.poetry]
authors = ["Antoine Gerardin <antoine.gerardin@nih.gov>", "Camilo Velez <camilo.velez@axleinfo.com>", "Nicholas Schaub <nick.schaub@nih.gov>"]
description = "General purpose tools for building computational workflows."
license = "License :: OSI Approved :: MIT License"
maintainers = ["Antoine Gerardin <antoine.gerardin@nih.gov>", "Camilo Velez <camilo.velez@axleinfo.com>"]
name = "polus-tools"
packages = [{include = "polus", from = "src"}]
readme = "README.md"
repository = "https://github.com/agerardin/polus-tools"
version = "0.1.0-dev0"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"

click = "^8.1.3"
cwl-utils = "^0.32"
cwltool = "^3.1.20240112164112"
fsspec = "^2023.6.0"
pydantic = "^2.6.2"
pygithub = "^1.58.2"
python-on-whales = "^0.68.0"
pyyaml = "^6.0.1"
rich = "^13.7.0"
tqdm = "^4.65.0"
validators = "^0.22.0"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
python = ">=3.9, <3.12"

black = "^24.2.0"
bump2version = "^1.0.1"
datamodel-code-generator = "^0.23.0"
flake8 = "^6.0.0"
fsspec = "^2023.1.0"
mypy = "^1.4.0"
nox = "^2022.11.21"
poetry = "^1.3.2"
pre-commit = "^3.6.2"
pydantic = "^2.6.2"
pytest = "^8.0.2"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.3.1"
python-on-whales = "^0.68.0"
pyyaml = "^6.0"
ruff = "^0.2.2"
tqdm = "^4.64.1"
types-pyyaml = "^6.0.12.12"
xmltodict = "^0.13.0"
pydantic-to-typescript = "^1.0.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.mypy]
enable_incomplete_feature = ["Unpack"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
